@@ -1,66 +1,0 @@
-== Demo app for RSpec on Rails
-
-This directory contains a demo app for RSpec on Rails.
-The purpose of this app is to serve as a testbed for
-RSpec on Rails. The rest of this document describes
-how to verify that Rspec on Rails works as intended.
-
-For more information, see the user docs:
-http://rspec.rubyforge.org/tools/rails.html
-
-=== Install prerequisites
-
-  * Ruby on Rails 1.1.2 or later
-  * SQlite3
-  * The sqlite3-ruby gem
-
-=== Initialize the development database
-
-  rake migrate
-
-=== Install the helper and rake tasks:
-
-  ruby script/generate rspec
-
-Now you should have the following files:
-
-  * spec/spec_helper.rb
-  * lib/tasks/rspec.rake
-  * vendor/generator/rspec_model
-  * vendor/generator/rspec_controller
-  * vendor/generator/rspec_integration
-
-(Note that in this demo project, these generated files are ignored by svn - since
-they are intended to be generated over again when changes are made.
-For other rails apps, these files should be checked into the SCM).
-
-=== Run the specs
-
-  rake spec
-
-If everything passes at this point, everything is good.
-
-=== Translate unit tests.
-
-  ../../bin/test2spec --template spec/test2spec.erb --specdir spec/models test/unit
-
-Then add the required fixtures statement in the translated specs, as described
-in rails.page (http://rspec.rubyforge.org/tools/rails.html).
-Try to run the specs again. The translated spec should pass too.
-
-=== Modifying the RSpec extensions
-
-The RSpec extensions live under vendor/generators/rspec/lib
-You can modify this source code here and run the specs for the demo
-app again with rake spec
-
-=== Modifying the Generators
-
-Whenever you make modifications to the generators, you should modify the original
-code under vendor/generators/rspec/templates and run script/generate rspec
-to have copies written out to vendor/generators/rspec_[controller|model]. Do
-*not* modify these files directly. They are not in svn, and will be overwritten
-the next time you run script/generate rspecs
-
-There is currently no automated way to test the generators. You'll just have to play
-with them and verify manually.
