@@ -1,8 +1,6 @@
 require 'rbconfig'
 
-# This generator adds the basic spec_helper.rb,
-# rails_spec for faster spec invocation
-# and rake tasks required to use RSpec with Rails
+# This generator bootstraps a Rails project for use with RSpec
 class RspecGenerator < Rails::Generator::Base
   DEFAULT_SHEBANG = File.join(Config::CONFIG['bindir'],
                               Config::CONFIG['ruby_install_name'])
@@ -15,15 +13,10 @@ class RspecGenerator < Rails::Generator::Base
     record do |m|
       script_options     = { :chmod => 0755, :shebang => options[:shebang] == DEFAULT_SHEBANG ? nil : options[:shebang] }
 
-      # The spec helpers
       m.directory 'spec'
-      m.template  'spec_helper.rb', 'spec/spec_helper.rb'
-      m.file      'test2spec.erb', 'spec/test2spec.erb'
-      m.file      'test2spec_help.rb', 'test/test2spec_help.rb'
-
-      # The rails_spec runner and client scripts
-      m.file 'script/rails_spec', 'script/rails_spec', script_options
-      m.file 'script/rails_spec_server', 'script/rails_spec_server', script_options
+      m.template  'spec_helper.rb',           'spec/spec_helper.rb'
+      m.file      'script/rails_spec',        'script/rails_spec', script_options
+      m.file      'script/rails_spec_server', 'script/rails_spec_server', script_options
 
     end
   end
